# wlang

./: .gitignore  Cargo.toml  test.rl
ast/src/: lib.rs  node.rs  token.rs
backend/: Cargo.toml
backend/src/: emit.rs  lib.rs  pass0.rs  tagged.rs  types.rs
backend/src/emit/: binary.rs  expr.rs  mod.rs
backend/src/pass1/: expr.rs  lvalue.rs  mod.rs  program.rs  scope.rs
doc/: types.latex
frontend/: Cargo.toml
frontend/src/: input.rs  lib.rs
frontend/src/lexer/: mod.rs
frontend/src/parser/: combinator.rs  expr.rs  mod.rs  program.rs
infer/: CHANGELOG.md  infer.cabal  package.yaml
infer/app/: Main.hs
infer/src/: Error.hs  Inference.hs  Lib.hs  PPrint.hs  Result.hs  Subst.hs  Type.hs  Unify.hs  Utils.hs
infer/src/Types/: Context.hs  Data.hs  Infer.hs  Subst.hs  Unify.hs
infer/test/: Spec.hs
macros/: Cargo.toml
macros/src/: lib.rs
src/: input.rs  main.rs
src/compiler/: emit.rs  mod.rs  pass0.rs  pass1.rs  pass2.rs
src/compiler/pass1/: expr.rs  mod.rs  program.rs  scope.rs
src/lexer/: mod.rs  token.rs
src/parser/: combinator.rs  expr.rs  mod.rs  program.rs
