[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
ast = { path = "../ast" }

[dependencies.inkwell]
version = "0.1.0"
git = "https://github.com/TheDan64/inkwell"
features = ["llvm14-0"]
